@@ -1,8 +1,16 @@
+2010-03-04  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/40761
+	* tree-ssa-pre.c (compute_antic): Walk reverse postorder
+	in reverse order.
+	(my_rev_post_order_compute): New function.
+	(init_pre): Call it.
+
 2010-03-04  Changpeng Fang  <changpeng.fang@amd.com>
 
 	PR middle-end/43209
-	* tree-ssa-loop-ivopts.c (determine_use_iv_cost_condition): Do not decrease
-	the cost of an IV candidate when the cost is infinite.
+	* tree-ssa-loop-ivopts.c (determine_use_iv_cost_condition): Do not
+	decrease the cost of an IV candidate when the cost is infinite.
 
 2010-03-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
